# notes-api

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20260630135013_create_notes_table.sql  20260710162213_fix_notes_table.sql
src/: dto.rs  errors.rs  handler.rs  main.rs  models.rs  repo.rs  responses.rs
