[package]
name = "notes-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = {version =  "0.4.45", features = ["serde"]}
serde = {version =  "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
sqlx = {version =  "0.9.0", features = ["sqlite", "chrono", "runtime-tokio"]}
